--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 		  <body translate="no" style="background-image: url('back.jpg');">
 			<main>
 			<ol class="gradient-list">
-			  <li>A high amount of DNA (Deoxyribonuleic Acid) is sysnthesised the S phase of the cell cycle.</li>
+			  <li>A high amount of DNA (Deoxyribonuleic Acid) is sysnthesised in the S phase of the cell cycle.</li>
 			  <li>In the Metaphase phase, the chromosome gets aligned at the centre of the cell.</li>
 			  <li>Osmosis is the process by which root hairs absorb water from the soil.</li>
 			  <li>Guard cells help to regulate the rate of transpiration by opening and closing of stomata.</li>
@@ -178,8 +178,8 @@
 			  <li>‘LUBB’ sound is created by the closing of the cuspid valves and ‘DUP’ sound is created by the closing of the semilunar valves.</li>
 			  <li>Chordae tendinae are present between tricuspid/bicuspid valves and papillary muscles of the heart.</li>
 			  <li>The left ventricle of the heart has a thicker wall than the right ventricle because it has to pump the blood to every part of the body, and under higher pressure.</li>
-			  <li>Anti Diuritic hormone increasing reabsorption of water by kidney tubules.</li>
-			  <li>Urocrome Pigment provides the slight yellow colour to urine.</li>
+			  <li>Anti Diuretic hormone increasing reabsorption of water by kidney tubules.</li>
+			  <li>Urochrome Pigment provides the slight yellow colour to urine.</li>
 			  <li>In winter, our body does not need to store much water because the outside temperatures are low. Also, very less amount of water is lost through perspiration during winter. Hence, urination is more frequent in winter than in summer.</li>
 			  <li>Blood in the renal artery has more urea as it still has to be purified by the kidneys.</li>
 			  <li>Ultrafiltration occurs in the golmerulus and the fluid obtained due to this is called golmerular filtrate.</li>
