--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#000000">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<style>
 	#style-7::-webkit-scrollbar-track
 {
 	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
@@ -45,7 +46,9 @@ color-stop(0.72, rgb(73,125,189)),
 									   
 
 color-stop(0.86, rgb(28,58,148)));
+	
 }
+		</style>
 </head>
 <body id = "style-7">
 	<div id="header" >
